--- a/amiya.css
+++ b/amiya.css
@@ -23,7 +23,17 @@ body{
     padding: 15px 15px;
     color: #d35400;
     font-family: 'Open Sans', sans-serif;
+    font-size: 2.5vh;
+    
 }
 .dark{
     background-color: #2d3436;
+}
+li a{
+    text-decoration: none;
+}
+@media only screen and (max-width: 600px){
+    .ard li{
+        font-size: 2vh;
+    }
 }
